<resources>
    <string name="app_name">SosApplication</string>
    <string name="sigin_in_text">Войти</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Пароль</string>
    <string name="recycler_password_text">Забыли пароль</string>
    <string name="settings_permission">Настройки</string>
    <string name="yes_add_contact">Да</string>
    <string name="cancel_add_contact">Отмена</string>
    <string name="registration_text">Регистрация</string>
    <string name="name_user_registration_text">Имя пользователя</string>
    <string name="registration_text_button">Зарегистрироваться</string>
    <string name="name">Егор Захарин</string>
    <string name="test_email">egorzaharin12@gmail.com</string>
    <string name="road_map_text">Проложить путь</string>
    <string name="settings_text_menu">Настройки</string>
    <string name="notification_peredioc">Переодичность отправки оповещений</string>
    <string name="minutes_in_text">В минутах</string>
    <string name="notification_query">С какой переодичностью посылать опопвещения?</string>
    <string name="user_name_auth">Имя пользователя</string>
    <string name="registration_number_user">Номер телефона</string>
    <string name="time_signal_sos">Время отправки сигнала SOS</string>
    <string name="check_signal_sos_time_dialog_text">По истечении какого времени , если вы не ответите на сообщение , посылать сигнал- SOS</string>
</resources>