<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator_main_layout_registration"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andorid="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar">

    <RelativeLayout
        android:id="@+id/relativeLayoutRegistration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sos_walapper">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="280dp"
            android:background="@color/orange"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_anchor="@id/cardViewRegistration"
            app:layout_anchorGravity="right" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRegistration"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:background="@color/white_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="8dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/spacing_medium_32"
                        android:background="@color/orange" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginTop="@dimen/spacing_medium_32"
                        android:text="@string/registration_text"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/size_middle_30" />


                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   >

                    <EditText
                        android:id="@+id/registrationName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_medium_32"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/name_user_registration_text"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   >

                    <EditText
                        android:id="@+id/registrationEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_medium_32"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/sign_in_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/registrationPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_medium_32"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/sign_in_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/registrationNumberUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_medium_32"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/registration_number_user"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registrationButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_medium_32"
                    android:background="@color/orange"
                    android:text="@string/registration_text_button"
                    android:textColor="@color/white_text"
                    android:textSize="@dimen/spacing_normal_16" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>